...
    var body: some View {
        Group {
            if isCover, !isReadRecord, preferences.boolean("useDefaultCover") || url == "use_default_cover", let book {
                ConfiguredCoverView(title: book.name ?? "", author: book.author ?? "", preferences: preferences)
            } else if let bitmap {
                Image(uiImage: bitmap).resizable().interpolation(preferences.boolean("antiAlias") ? .high : .none).scaledToFit()
                    .accessibilityLabel(isCover ? "书籍封面" : "正文图片")
            } else if isReadRecord, model.state != .loading {
                SettingsImage(path: preferences.string(colorScheme == .dark ? "readRecordCoverDark" : "readRecordCover"))
            } else if isCover, let book, model.state != .loading {
                ConfiguredCoverView(title: book.name ?? "", author: book.author ?? "", preferences: preferences)
            } else {
                ZStack {
...
